* fixed wrong z-index for modal * fixed js bug (jquery of wordpress shouldn't get messed up anymore) * added german translations * added post_thumbnail to posts array from view helper * fixed comments list of view helper (it doesn't return all comments anymore) * improved default templates

--- a/css/_modal.less
+++ b/css/_modal.less
@@ -10,8 +10,12 @@ body.neochic-woodlets-modal-active {
   left:0;
   width:100%;
   height:100vh;
-  z-index:500001;
+  z-index:100060;
   background-color:rgba(0,0,0,0.7);
+
+  .wp-customizer & {
+    z-index:500001;
+  }
 }
 .neochic-woodlets-modal-content {
   max-width:800px;
